# GLGame

./: .gitignore  README.md
docs/: .gitignore  Doxyfile  GLEngine.doxy  GLGame.doxy  coding_standards.md
docs/GLEngine/: .gitignore
docs/doxyfiles/: GLEngine.doxy  GLGame.doxy
docs/other/: TODO.txt  thoughts.txt
source/: CMakeLists.txt  main.cpp
source/engine/: CMakeLists.txt  engine.cpp  engine.hpp
source/engine/graphics/: fragshader.hpp  graphics.hpp  mesh.hpp  shader.hpp  shaderman.hpp  shaderprog.hpp  sprite.hpp  vertshader.hpp  window.hpp
source/engine/graphics/src/: CMakeLists.txt  fragshader.cpp  graphics.cpp  mesh.cpp  shader.cpp  shaderman.cpp  shaderprog.cpp  sprite.cpp  vertshader.cpp  window.cpp
source/engine/input/: input.hpp  keys.hpp
source/engine/input/src/: CMakeLists.txt  input.cpp
source/engine/util/: gl.hpp  glfw.hpp  initializer.hpp  logger.hpp  resolution.hpp  vectors.hpp
source/engine/util/src/: CMakeLists.txt  initializer.cpp  logger.cpp
source/game/: game.hpp
source/game/data/: test_fs.glsl  test_vs.glsl
source/game/src/: CMakeLists.txt  game.cpp  main.cpp
src/engine/: CMakeLists.txt
src/engine/graphics/src/: graphics.cpp
src/game/src/: CMakeLists.txt  game.cpp
